NXP-6688 Add i18n labels

--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
@@ -1926,3 +1926,23 @@ label.local.configuration.selection.availableUITypes=Existing types
 label.local.configuration.selection.selectedUITypes=Enabled types
 label.local.configuration.theme=Theme configuration
 label.local.configuration.theme.info=To set a different theme in your space, click on the "Enable" button and select the theme you want to use.
+
+# Html5 Dnd related labels
+label.import.and.add.to.clipboard = Import and add to Clipboard
+desc.import.and.add.to.clipboard = Import in personal Workspace and add to Clipboard
+label.import.and.add.to.worklist = Import and add to Worklist
+desc.import.and.add.to.worklist = Import in personal Workspace and add to Worklist
+label.smart.import = Smart import
+desc.smart.import.file = Let Nuxeo select the appropriate Document Type for each file
+label.smart.import.with.md = Smart import with meta-data
+desc.smart.import.with.md = Let Nuxeo select the appropriate Document Type for each file and initialize meta-data
+label.dnd.attach = Attach
+desc.dnd.attach = Attach file to the current document
+label.dnd.attachfiles = Attach
+desc.dnd.attachfiles = Attach files to the current document
+command.continue = Continue
+import.continue = Continue import
+label.dnd.upload.inprogress=Upload in progress
+label.dnd.upload.ok.continue=Upload completed, click to continue
+label.dnd.uploaded.files=Uploaded files
+label.dnd.choose.operation=Select import operation
