--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
@@ -1915,8 +1915,28 @@ label.local.configuration.ui.types.denyAllTypes=Interdire tous les types
 label.local.configuration.ui.defaultType=Type par d\u00e9faut
 label.local.configuration.search.info=Configuration de la recherche
 label.local.configuration.search=Configuration de la recherche
-label.local.configuration.advancedSearchView=Vue recherche avancée
+label.local.configuration.advancedSearchView=Vue recherche avanc\u00e9e
 label.local.configuration.selection.availableUITypes=Types existants
 label.local.configuration.selection.selectedUITypes=Types activ\u00e9s
 label.local.configuration.theme=Configuration du th\u00E8me
 label.local.configuration.theme.info=Pour d\u00E9finir un th\u00E8me diff\u00E9rent depuis votre espace, cliquez sur le bouton "Activer" et s\u00E9lectionnez le th\u00E8me d\u00E9sir\u00E9.
+
+# Html5 Dnd related labels
+label.import.and.add.to.clipboard = Importer et mettre dans le presse-papier
+desc.import.and.add.to.clipboard = Importer dans l'espace personal et mettre dans le presse-papier
+label.import.and.add.to.worklist = Importer et mettre dans ma liste de documents
+desc.import.and.add.to.worklist = Importer dans l'espace personal et mettre dans ma liste de documents
+label.smart.import = Import intelligent
+desc.smart.import.file = Laisser Nuxeo choisir le type de document en fonction du type de fichier
+label.smart.import.with.md = Import intelligent avec meta-donn\u00e9es
+desc.smart.import.with.md = Laisser Nuxeo choisir le type de document en fonction du type de fichier et Ajouter des meta-donn\u00e9es
+label.dnd.attach = Attacher
+desc.dnd.attach = Attacher un fichier au document
+label.dnd.attachfiles = Attacher
+desc.dnd.attachfiles = Attacher des fichiers au document
+command.continue = Continuer
+import.continue = Continuer l'import
+label.dnd.upload.inprogress=Import en cours
+label.dnd.upload.ok.continue=Import termin\u00E9, cliquez sur Continuer
+label.dnd.uploaded.files=Fichiers charg\u00E9s sur le serveur
+label.dnd.choose.operation=S\u00E9lectionner l'op\u00E9ration d'import
