NXP-6202 Add missing labels

--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
@@ -1802,3 +1802,13 @@ label.dnd.upload.inprogress=Upload in progress
 label.dnd.upload.ok.continue=Upload completed, click to continue
 label.dnd.uploaded.files=Uploaded files
 label.dnd.choose.operation=Select import operation
+
+# OAuth Grant screen
+label.oauth.consumer.application = The application
+label.oauth.consumer.accessRequest = is requesting access to your Nuxeo data.
+label.oauth.consumer.grantQuestion = Do you want to grant access ?
+label.oauth.5m=5 minutes
+label.oauth.1h=1 hour
+label.oauth.1d=1 day
+label.oauth.1w=1 week
+label.oauth.1mth=1 month
