--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
@@ -1940,3 +1940,13 @@ label.dnd.upload.inprogress=Import en cours
 label.dnd.upload.ok.continue=Import termin\u00E9, cliquez sur Continuer
 label.dnd.uploaded.files=Fichiers charg\u00E9s sur le serveur
 label.dnd.choose.operation=S\u00E9lectionner l'op\u00E9ration d'import
+
+# OAuth Grant screen
+label.oauth.consumer.application = L'application
+label.oauth.consumer.accessRequest = cherche a acceder \u00e0 vos donn\u00e9es Nuxeo.
+label.oauth.consumer.grantQuestion = Voulez vous autoriser l'acc\u00e8s ?
+label.oauth.5m=5 minutes
+label.oauth.1h=1 heure
+label.oauth.1d=1 jour
+label.oauth.1w=1 semaine
+label.oauth.1mth=1 mois
