NXP-6651: label update

--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
@@ -979,11 +979,11 @@ label.gadget.meteo=Meteo
 label.gadget.note=Note
 label.gadget.photo=Photo
 label.gadget.richtext=Text Editor
-label.gadget.tasks=My tasks
-label.gadget.todolist=Todo list
-label.gadget.userdocuments=My documents
-label.gadget.usersites=My sites
-label.gadget.userworkspaces=My workspaces
+label.gadget.tasks=My Tasks
+label.gadget.todolist=Todo List
+label.gadget.userdocuments=My Documents
+label.gadget.usersites=My Sites
+label.gadget.userworkspaces=My Workspaces
 label.gadget.video=Video
 label.gadget.waitingfor=My Pending Requests
 label.groupManager.editGroup=Edit
