--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
@@ -1794,17 +1794,17 @@ label.gadget.bookmarks=Bookmarks
 label.gadget.mappy=Mappy
 label.gadget.richtext=Text Editor
 label.gadget.meteo=Meteo
-label.gadget.todolist=Todo list
+label.gadget.todolist=Todo List
 label.gadget.note=Note
 label.gadget.hello=Hello
 label.gadget.bbcnews=BBC News
 label.gadget.flash=Flash
 label.gadget.video=Video
 label.gadget.photo=Photo
-label.gadget.userdocuments=My documents
-label.gadget.usersites=My sites
-label.gadget.userworkspaces=My workspaces
-label.gadget.tasks=My tasks
+label.gadget.userdocuments=My Documents
+label.gadget.usersites=My Sites
+label.gadget.userworkspaces=My Workspaces
+label.gadget.tasks=My Tasks
 label.gadget.waitingfor=My Pending Requests
 
 desc.gadget.bookmarks=Let you store and manage your bookmarks.
