--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
@@ -1786,20 +1786,20 @@ gadget.category.information=Informations
 
 label.gadget.bookmarks=Favoris
 label.gadget.mappy=Mappy
-label.gadget.richtext=Edteur de texte
+label.gadget.richtext=Edteur De Texte
 label.gadget.meteo=M\u00e9t\u00e9o
-label.gadget.todolist=T\u00e2ches personnelles
+label.gadget.todolist=T\u00e2ches Personnelles
 label.gadget.note=Note
 label.gadget.hello=Hello
 label.gadget.bbcnews=BBC News
 label.gadget.flash=Flash
 label.gadget.video=Vid\u00e9o
 label.gadget.photo=Photo
-label.gadget.userdocuments=Mes documents
-label.gadget.usersites=Mes sites
-label.gadget.userworkspaces=Mes workspaces
-label.gadget.tasks=Mes t\u00e2ches
-label.gadget.waitingfor=Mes demandes en attente
+label.gadget.userdocuments=Mes Documents
+label.gadget.usersites=Mes Sites
+label.gadget.userworkspaces=Mes Dorkspaces
+label.gadget.tasks=Mes T\u00e2ches
+label.gadget.waitingfor=Mes Demandes en Attente
 
 desc.gadget.bookmarks=Vous permet de stocker vos favoris
 desc.gadget.mappy=Mappy
