NXP-6651: label update

--- a/nuxeo-opensocial-gadgets/src/main/resources/OSGI-INF/l10n/messages.properties
+++ b/nuxeo-opensocial-gadgets/src/main/resources/OSGI-INF/l10n/messages.properties
@@ -1,6 +1,6 @@
-label.gadget.lastpublisheddocuments=Last published documents
-label.gadget.lastdocuments=Last modified documents
-label.gadget.userdeleteddocuments=My deleted documents
+label.gadget.lastpublisheddocuments=Last Published Documents
+label.gadget.lastdocuments=Last Modified Documents
+label.gadget.userdeleteddocuments=My Deleted Documents
 label.gadget.no.document=There is no document to show
 label.gadget.edit=Edit
 label.gadget.quicksearch.description=Type a text to start the document search
