NXP-6811 : Add local configuration for document 'content' ContentView

--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
@@ -1920,6 +1920,9 @@ label.local.configuration.selection.availableUITypes=Types existants
 label.local.configuration.selection.selectedUITypes=Types activ\u00e9s
 label.local.configuration.theme=Configuration du th\u00E8me
 label.local.configuration.theme.info=Pour d\u00E9finir un th\u00E8me diff\u00E9rent depuis votre espace, cliquez sur le bouton "Activer" et s\u00E9lectionnez le th\u00E8me d\u00E9sir\u00E9.
+label.local.configuration.contentView=Configuration des contenus de documents
+label.local.configuration.contentView.info=Pour changer un ou plusieurs contenus de documents, cliquez sur le bouton "Activer" et s\u00E9lectionnez la ContentView d\u00E9sir\u00E9.
+label.local.configuration.content.view.contentViewSelection=Associer types de document et ContentView
 
 # Html5 Dnd related labels
 label.import.and.add.to.clipboard = Importer et mettre dans le presse-papier
