NXP-6764 : Add info for Search configuration

--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
@@ -1775,7 +1775,7 @@ label.local.configuration.uiTypes.info=To set which document types can be create
 label.local.configuration.ui.types.allowedTypesSelection=Select the document types that can be created
 label.local.configuration.ui.types.denyAllTypes=Deny all types
 label.local.configuration.ui.defaultType=Default type
-label.local.configuration.search.info=Search Configuration
+label.local.configuration.search.info=To set a different form for advanced search in your space, click on the "Enable" button and select the form you want to use.
 label.local.configuration.search=Search Configuration
 label.local.configuration.advancedSearchView=Advanced search view
 label.local.configuration.selection.availableUITypes=Existing types
