--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
@@ -853,7 +853,7 @@ Collaborative=Espaces collaboratifs
 misc=Divers
 
 # description for document type
-Domain.description=Un domaine est un espace cr\u00e9e par l'administrateur \u00e0 la racine du site. Les domaines contiennent des workspaces, sections, ou templates.
+Domain.description=Un domaine est un espace cr\u00e9\u00e9 par l'administrateur \u00e0 la racine du site. Les domaines contiennent des workspaces, sections, ou templates.
 WorkspaceRoot.description=Racine des espaces de travail
 SectionRoot.description=Racine des sections
 Workspace.description=Les Workspaces sont d\u00e9di\u00e9s \u00e0 la cr\u00e9ation et l'\u00e9dition de contenu de mani\u00e8re collaborative par diff\u00e9rents utilisateurs.
@@ -1913,7 +1913,7 @@ label.local.configuration.uiTypes.info=Pour d\u00e9finir quels types de document
 label.local.configuration.ui.types.allowedTypesSelection=S\u00e9lectionner les types de documents qui peuvent \u00eatre cr\u00e9\u00e9s
 label.local.configuration.ui.types.denyAllTypes=Interdire tous les types
 label.local.configuration.ui.defaultType=Type par d\u00e9faut
-label.local.configuration.search.info=Configuration de la recherche
+label.local.configuration.search.info=Pour d\u00E9finir le formulaire de recherche avanc\u00E9 disponible dans votre espace, cliquez sur le bouton "Activer" et s\u00E9lectionnez le nom du formulaire que vous voulez activer.
 label.local.configuration.search=Configuration de la recherche
 label.local.configuration.advancedSearchView=Vue recherche avanc\u00e9e
 label.local.configuration.selection.availableUITypes=Types existants
@@ -1946,7 +1946,7 @@ label.dnd.choose.operation=S\u00E9lectionner l'op\u00E9ration d'import
 
 # OAuth Grant screen
 label.oauth.consumer.application = L'application
-label.oauth.consumer.accessRequest = cherche a acceder \u00e0 vos donn\u00e9es Nuxeo.
+label.oauth.consumer.accessRequest = cherche \u00e0 acc\u00e9der \u00e0 vos donn\u00e9es Nuxeo.
 label.oauth.consumer.grantQuestion = Voulez vous autoriser l'acc\u00e8s ?
 label.oauth.5m=5 minutes
 label.oauth.1h=1 heure
