NXP-6651 label update

--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
@@ -1797,7 +1797,7 @@ label.gadget.video=Vid\u00e9o
 label.gadget.photo=Photo
 label.gadget.userdocuments=Mes Documents
 label.gadget.usersites=Mes Sites
-label.gadget.userworkspaces=Mes Dorkspaces
+label.gadget.userworkspaces=Mes Workspaces
 label.gadget.tasks=Mes T\u00e2ches
 label.gadget.waitingfor=Mes Demandes en Attente
 
