NXP-6419: add labels

--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -1,3 +1,4 @@
+label.main.tab.administration=Administration
 action.admin.center=Nuxeo Admin Center
 action.admin.exit=Quitter l'Admin Center
 admcommand.nuxeoconnect=Nuxeo Connect
