--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
@@ -1815,3 +1815,6 @@ label.oauth.1h=1 hour
 label.oauth.1d=1 day
 label.oauth.1w=1 week
 label.oauth.1mth=1 month
+
+# Main tabs
+label.main.tab.documents=Documents
