--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
@@ -1953,3 +1953,6 @@ label.oauth.1h=1 heure
 label.oauth.1d=1 jour
 label.oauth.1w=1 semaine
 label.oauth.1mth=1 mois
+
+# Main tabs
+label.main.tab.documents=Documents
