NXP-6414: add command.saveAndCreate label

--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
@@ -358,6 +358,7 @@ command.next=Next
 command.ok=OK
 command.restore=Restore
 command.save=Save
+command.saveAndCreate=Save and create
 command.search=Search
 command.security.addPerm=Add permission
 command.security.delPerm=Remove permission(s)
