--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
@@ -280,6 +280,7 @@ command.import=Importer
 command.upload=Envoyer
 command.next=Suivant
 command.save=Enregistrer
+command.saveAndCreate=Enregistrer et cr\u00e9er
 command.save_as_new_version=Enregistrer dans une nouvelle version
 command.login=M'authentifier
 command.logout=D\u00e9connexion
