--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
@@ -286,6 +286,7 @@ command.removeArchivedVersion=Delete
 command.rename=Rename
 command.restore=Restore
 command.save=Save
+command.saveAndCreate=Save and create
 command.save_as_new_version=Save as a new version
 command.search.add_field=Add field
 command.search.reindex=Reindex
