NXP-6419: update labels in the new nuxeo_footer

--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
@@ -954,6 +954,11 @@ label.file.content=Content
 label.file.filename=Filename
 label.files.files=Files
 label.files.noAttachedFiles=There are no files attached to this document.
+label.footer.contactUs=Contact us
+label.footer.blogs=Blogs
+label.footer.community=Community
+label.footer.forums=Forum
+label.footer.documentation=Documentation
 label.forum.content.header.last_added=Last message
 label.forum.content.header.moderated=Moderation
 label.forum.content.header.nb_pending_posts=Nbr. of pending posts
