--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
@@ -1359,6 +1359,12 @@ label.login.missingUsername=Missing user name
 label.login.securityError=Unauthorized user
 label.login.copyright=Copyright \u00A9 2001-2011 Nuxeo and respective authors.
 
+label.footer.contactUs=Contact us
+label.footer.blogs=Blogs
+label.footer.community=Community
+label.footer.forums=Forum
+label.footer.documentation=Documentation
+
 label.maintenancemode.active=Maintenance mode is activated
 label.maintenancemode.adminLoginOnly=Only Administrators can access the server
 label.maintenancemode.message=Message from Administrators
