--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
@@ -783,6 +783,12 @@ label.login.missingUsername=Identifiant non renseign\u00e9
 label.login.securityError=Utilisateur non autoris\u00e9
 label.login.copyright=Copyright \u00a9 2001-2011 Nuxeo et les auteurs respectifs.
 
+label.footer.contactUs=Contactez-nous
+label.footer.blogs=Blogs
+label.footer.community=Communaut\u00e9
+label.footer.forums=Forum
+label.footer.documentation=Documentation
+
 label.maintenancemode.active=Le server Nuxeo est en mode maintenance
 label.maintenancemode.adminLoginOnly=Seuls les Administrateurs peuvent se connecter
 label.maintenancemode.message=Message des Administrateurs
