NXP-6682 Add labels for error messages

--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
@@ -1950,6 +1950,8 @@ label.dnd.upload.inprogress=Upload in progress
 label.dnd.upload.ok.continue=Upload completed, click to continue
 label.dnd.uploaded.files=Uploaded files
 label.dnd.choose.operation=Select import operation
+label.dnd.nooperation=You cannot upload here (insufficient rights, or bad configuration)
+label.dnd.error=Upload cannot continue due to an error
 
 # OAuth Grant screen
 label.oauth.consumer.application = The application
