NXP-6419: Simplify the loggedAsUser label

--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
@@ -1027,7 +1027,7 @@ label.location=Location
 label.locations=Locations
 label.log.comment.assignedToGroup=Assigned to group
 label.log.comment.assignedToUser=Assigned to
-label.loggedAsUser=You are logged as #{facesContext.externalContext.userPrincipal.name}
+label.loggedAsUser=#{facesContext.externalContext.userPrincipal.name}
 label.login.IEExtension=IE Extension
 label.login.copyright=Copyright \u00A9 2001-2011 Nuxeo and respective authors.
 label.login.documentation=Documentation
