--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
@@ -433,7 +433,7 @@ label.title=Title
 label.description=Description
 label.selectFileToImport=Select the file to import
 label.operations=Operations
-label.loggedAsUser=You are logged as #{facesContext.externalContext.userPrincipal.name}
+label.loggedAsUser=#{facesContext.externalContext.userPrincipal.name}
 label.time=Time
 label.action=Action
 label.dublincore.subject=Subjects
