--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
@@ -631,7 +631,7 @@ label.description=Description
 label.selectFileToImport=S\u00e9lectionner le fichier \u00e0 importer
 label.availableWorkspaces=Espaces de travail disponibles
 label.operations=Op\u00e9rations
-label.loggedAsUser=Votre identit\u00e9 \: \#{facesContext.externalContext.userPrincipal.name}
+label.loggedAsUser=#{facesContext.externalContext.userPrincipal.name}
 label.action=Action
 label.document=Document
 
