NXP-6419: update labels, update selenium tests

--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -1,4 +1,4 @@
-label.main.tab.administration=Administration
+label.main.tab.admin.center=Admin Center
 action.admin.center=Nuxeo Admin Center
 action.admin.exit=Quitter l'Admin Center
 admcommand.nuxeoconnect=Nuxeo Connect
