--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
@@ -916,19 +916,19 @@ label.dublincore.coverage.info=This field is used by virtual navigation
 label.dublincore.coverage=Coverage
 label.dublincore.created=Created at
 label.dublincore.creationDate=Creation date
-label.dublincore.creationDateBetween=Creation date between
+label.dublincore.creationDateBetween=Creation date from
 label.dublincore.creator=Author
 label.dublincore.description=Description
 label.dublincore.expirationDate=Expiration date
-label.dublincore.expirationDateBetween=Expiration date between
+label.dublincore.expirationDateBetween=Expiration date from
 label.dublincore.expired=Expire on
 label.dublincore.format=Format
 label.dublincore.issueDate=Issue date
-label.dublincore.issueDateBetween=Issue date between
+label.dublincore.issueDateBetween=Issue date from
 label.dublincore.issued=Issued on
 label.dublincore.language=Language
 label.dublincore.modificationDate=Modification date
-label.dublincore.modificationDateBetween=Modification date between
+label.dublincore.modificationDateBetween=Modification date from
 label.dublincore.modified=Last modified at
 label.dublincore.owner=Owner
 label.dublincore.relations=FIXME: Relation
@@ -940,7 +940,7 @@ label.dublincore.subjects=Subjects
 label.dublincore.title=Title
 label.dublincore.valid=Valid from
 label.dublincore.validationDate=Validation date
-label.dublincore.validationDateBetween=Validation date between
+label.dublincore.validationDateBetween=Validation date from
 label.email.addNewUserToSendTo=Add New User
 label.email.nousers.selected=You must select at least one user to send the email to.
 label.email.search.users=Search
@@ -1696,7 +1696,7 @@ label.contentview.filter.clearFilter=Clear filter
 label.contentview.filter.clearFilterButton=Clear
 label.exportview=Export view
 label.exportview.document=Document export
-label.exportview.contentviews=Content Views Export
+label.exportview.contentviews=Directory Export
 label.exportview.contentviews.category=Category
 label.exportview.xmlExport=XML Export
 label.exportview.pdfExport=PDF Export
@@ -1825,4 +1825,4 @@ label.oauth.1w=1 week
 label.oauth.1mth=1 month
 
 # Main tabs
-label.main.tab.documents=Documents
+label.main.tab.documents=Document Management
