--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
@@ -1405,11 +1405,11 @@ label.dublincore.expirationDate=Expiration date
 label.dublincore.issueDate=Issue date
 label.dublincore.modificationDate=Modification date
 label.dublincore.validationDate=Validation date
-label.dublincore.creationDateBetween=Creation date between
-label.dublincore.expirationDateBetween=Expiration date between
-label.dublincore.issueDateBetween=Issue date between
-label.dublincore.modificationDateBetween=Modification date between
-label.dublincore.validationDateBetween=Validation date between
+label.dublincore.creationDateBetween=Creation date from
+label.dublincore.expirationDateBetween=Expiration date from
+label.dublincore.issueDateBetween=Issue date from
+label.dublincore.modificationDateBetween=Modification date from
+label.dublincore.validationDateBetween=Validation date from
 
 
 label.email.addNewUserToSendTo=Add New User
@@ -1907,7 +1907,7 @@ label.contentview.orderable_document_content=Orderable document content
 # export view
 label.exportview=Export view
 label.exportview.document=Document export
-label.exportview.contentviews=Content Views Export
+label.exportview.contentviews=Directory Export
 label.exportview.contentviews.category=Category
 label.exportview.xmlExport=XML Export
 label.exportview.pdfExport=PDF Export
@@ -1970,4 +1970,4 @@ label.oauth.1w=1 week
 label.oauth.1mth=1 month
 
 # Main tabs
-label.main.tab.documents=Documents
+label.main.tab.documents=Document Management
