--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
@@ -658,11 +658,11 @@ label.dublincore.description=Description
 label.dublincore.issueDate=Date de publication
 label.dublincore.validationDate=Date de d\u00e9but de validit\u00e9
 label.dublincore.subjects=Sujets
-label.dublincore.creationDateBetween=Cr\u00e9\u00e9 entre le
-label.dublincore.expirationDateBetween=Expir\u00e9 entre le
-label.dublincore.issueDateBetween=Publi\u00e9 entre le
-label.dublincore.modificationDateBetween=Modifi\u00e9 entre le
-label.dublincore.validationDateBetween=Valid\u00e9 entre le
+label.dublincore.creationDateBetween=Cr\u00e9\u00e9 du
+label.dublincore.expirationDateBetween=Expir\u00e9 du
+label.dublincore.issueDateBetween=Publi\u00e9 du
+label.dublincore.modificationDateBetween=Modifi\u00e9 du
+label.dublincore.validationDateBetween=Valid\u00e9 du
 label.dublincore.lastContributor.info=Le champs dernier contributeur est automatiquement rempli lorsqu'on cr\u00e9e ou modifie le document
 label.dublincore.lastContributor=Dernier contributeur
 
@@ -1901,7 +1901,7 @@ label.contentview.orderable_document_content=Contenu du document ordonn\u00e9
 # export view
 label.exportview=Vue d'export
 label.exportview.document=Export du document
-label.exportview.contentviews=Export des vues de contenu
+label.exportview.contentviews=Export du r\u00e9pertoire
 label.exportview.contentviews.category=Cat\u00e9gorie
 label.exportview.xmlExport=Export XML
 label.exportview.pdfExport=Export PDF
@@ -1964,4 +1964,4 @@ label.oauth.1w=1 semaine
 label.oauth.1mth=1 mois
 
 # Main tabs
-label.main.tab.documents=Documents
+label.main.tab.documents=Document Management
