--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages_en.properties
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages_en.properties
@@ -1,4 +1,4 @@
-label.main.tab.administration=Administration
+label.main.tab.admin.center=Admin Center
 action.admin.center=Nuxeo Admin Center
 action.admin.exit=Exit admin center
 admcommand.nuxeoconnect=Nuxeo Connect
