NXP-6852 display nb of connected users when restarting server

--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages_en.properties
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages_en.properties
@@ -279,7 +279,7 @@ label.setup.nuxeo.http.proxy.login=Login
 label.setup.nuxeo.http.proxy.password=Password
 label.restart.confirm=Restart server now ?
 label.action.restart=Restart server
-
+label.restart.connectedusers= user(s) currently connected
 
 adminsubtab.usersActivity.userSessions.title = User's Http Sessions
 adminsubtab.usersActivity.userSessions.total = Total number of active Http Sessions
