--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -273,6 +273,7 @@ label.setup.nuxeo.http.proxy.port=Port
 label.setup.nuxeo.http.proxy.login=Nom d'utilisateur
 label.setup.nuxeo.http.proxy.password=Mot de passe
 label.restart.confirm=Redémarrer le serveur maintenant ?
+label.restart.connectedusers= utilisateur(s) actuellement connecté(s)
 label.action.restart=Redémarrer le serveur
 
 
