Fix missing labels

--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -137,6 +137,10 @@ label.nuxeo.connect.id.CLID=Identifiant d'instance logique (CLID)
 label.nuxeo.connect.id.CTID=Identifiant d'instance technique (CTID)
 
 # audit view
+label.timerange.5m=5 minutes
+label.timerange.10m=10 minutes
+label.timerange.20m=20 minutes
+label.timerange.30m=30 minutes
 label.timerange.1h=1 heure
 label.timerange.2h=2 heures
 label.timerange.3h=3 heures
@@ -160,6 +164,7 @@ label.timerange.2w=2 semaines
 label.timerange.3w=2 semaines
 label.timerange.4w=4 semaines
 label.timerange.5w=5 semaines
+label.timerange.all=Tout
 
 label.audit.all=Tout
 label.audit.auth=Authentification
