NXP-6870: display an user message for : Cannot move a node under itself

--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
@@ -636,6 +636,7 @@ selection_contains_non_publishable_docs=Your selection contains unpublishable do
 document_modified={0} modified
 document_saved={0} saved
 can_not_delete_proxies=Documents cannot be deleted, but can be unpublished.
+invalid_operation=Invalid operation.
 
 # documents updated message used by bulk editing feature
 feedback.documents_updated=Documents updated
