--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
@@ -973,6 +973,7 @@ move_impossible=D\u00E9placement impossible
 publish_impossible=Publication impossible
 move_insuffisant_rights=Vous n'avez pas de droits d'\u00E9criture dans cet espace.
 can_not_delete_proxies=Les documents ne peuvent pas \u00EAtre supprim\u00E9s, mais d\u00E9publi\u00E9s.
+invalid_operation=Op\u00e9ration invalide.
 
 label.directories.subject.arts=Arts
 label.directories.subject.business=Commerce et \u00E9conomie
