NXP-6870: display an user message for : Cannot move a node under itself

--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
@@ -1539,6 +1539,7 @@ n_pasted_docs=Document(s) pasted
 n_published_docs=Document(s) published
 n_undeleted_docs=Document(s) restored
 n_unpublished_docs={0} Document(s) unpublished
+invalid_operation=Invalid operation.
 new_version_created=New version saved
 note=Note
 notifications.name.Approbationreviewstarted=Approval workflow started
