--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -22,6 +22,7 @@ tab.sysinfo.nuxeo=Nuxeo distribution
 tab.sysinfo.reposStats=Statistiques
 tab.sysinfo.usersActivity=Activité des utilisateurs
 tab.sysinfo.setup=Configuration
+tab.sysinfo.binariesInfo=Binaires
 
 tab.useractivity.usersSessions=Sessions utilisateurs
 tab.useractivity.usersActivity=Activité des utilisateurs
@@ -65,6 +66,16 @@ adminsubtab.sysinfo.distribDate=Date de la distribution
 adminsubtab.sysinfo.warnings=Alertes au déploiement
 adminsubtab.sysinfo.noWarns=Pas d'alertes
 adminsubtab.sysinfo.bundles=Bundles déployés
+
+adminsubtab.sysinfo.binariesinfo.intro=Informations sur les binaires
+adminsubtab.sysinfo.binariesinfo.start=Lancer le nettoyage des binaires
+adminsubtab.sysinfo.binariesinfo.wait=Merci de patienter, nettoyage en cours...
+adminsubtab.sysinfo.binariesinfo.info=Information sur les binaires utilisés et nettoyés dans la base de données
+adminsubtab.sysinfo.binariesinfo.gcduration=Temps de nettoyage (secondes)
+adminsubtab.sysinfo.binariesinfo.numbinaries=Nombre de binaires utilisés
+adminsubtab.sysinfo.binariesinfo.sizebinaries=Taille des binaires utilisés (octets)
+adminsubtab.sysinfo.binariesinfo.numbinariesgc=Nombre de binaires nettoyés
+adminsubtab.sysinfo.binariesinfo.sizebinariesgc=Taille des binaires nettoyés (octets)
 
 label.packagetype=Type de package
 label.packagetype.all=Tous
