--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages_en.properties
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages_en.properties
@@ -21,6 +21,7 @@ tab.sysinfo.reposInfo=Repository statistics
 tab.sysinfo.nuxeo=Nuxeo distribution
 tab.sysinfo.reposStats=Repository Stats
 tab.sysinfo.setup=Setup
+tab.sysinfo.binariesInfo=Repository binaries
 
 tab.useractivity.usersSessions=Users sessions
 tab.useractivity.usersActivity=Users activity
@@ -64,6 +65,16 @@ adminsubtab.sysinfo.distribDate=Distribution date
 adminsubtab.sysinfo.warnings=Warnings on startup
 adminsubtab.sysinfo.noWarns=None
 adminsubtab.sysinfo.bundles=Deployed bundles
+
+adminsubtab.sysinfo.binariesinfo.intro=Information about the repository binaries
+adminsubtab.sysinfo.binariesinfo.start=Start garbage collection of binaries
+adminsubtab.sysinfo.binariesinfo.wait=Please wait, garbage collecting binaries...
+adminsubtab.sysinfo.binariesinfo.info=Information about the repository's active and garbage collected binaries
+adminsubtab.sysinfo.binariesinfo.gcduration=Garbage collection duration (seconds)
+adminsubtab.sysinfo.binariesinfo.numbinaries=Number of active binaries
+adminsubtab.sysinfo.binariesinfo.sizebinaries=Size of active binaries (bytes)
+adminsubtab.sysinfo.binariesinfo.numbinariesgc=Number of garbage collected binaries
+adminsubtab.sysinfo.binariesinfo.sizebinariesgc=Size of garbage collected binaries (bytes)
 
 label.packagetype=Package type
 label.packagetype.all=All
