--- a/nuxeo-platform-signature-web/src/main/resources/l10n/messages_en.properties
+++ b/nuxeo-platform-signature-web/src/main/resources/l10n/messages_en.properties
@@ -31,8 +31,8 @@ label.sign.attachments.missing=Your document does not contain any attachments
 label.sign.pdf.warning=The attachment must be a PDF
 label.sign.document.mime=MIME information missing for your document
 label.sign.modify.permission.warning=You are not permitted to sign this document
-label.sign.document.signed=This document is signed
-label.sign.document.not.signed=This document is not signed
+label.sign.document.signed=This document is signed by
+label.sign.document.not.signed=You did not sign this document
 notification.sign.signed=has been signed
 notification.sign.certificate.access.problem=Problem accessing your certificate. Make sure your password is correct.
 notification.sign.problem=PDF signing problem
