--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
@@ -637,6 +637,7 @@ document_modified={0} modified
 document_saved={0} saved
 can_not_delete_proxies=Documents cannot be deleted, but can be unpublished.
 invalid_operation=Invalid operation.
+document_no_deleted_state=Document lifecycle has no 'deleted' state. Operation is not posible for:
 
 # documents updated message used by bulk editing feature
 feedback.documents_updated=Documents updated
