NXP-6881: check if document accepts "deleted" state

--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
@@ -1540,6 +1540,7 @@ n_published_docs=Document(s) published
 n_undeleted_docs=Document(s) restored
 n_unpublished_docs={0} Document(s) unpublished
 invalid_operation=Invalid operation.
+document_no_deleted_state=Document lifecycle has no 'deleted' state. Operation is not posible for:
 new_version_created=New version saved
 note=Note
 notifications.name.Approbationreviewstarted=Approval workflow started
