--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
@@ -995,6 +995,7 @@ publish_impossible=Publication impossible
 move_insuffisant_rights=Vous n'avez pas de droits d'\u00e9criture dans cet espace.
 can_not_delete_proxies=Les documents ne peuvent pas \u00eatre supprim\u00e9s, mais d\u00e9publi\u00e9s.
 invalid_operation=Op\u00e9ration invalide.
+document_no_deleted_state=Le cycle de vie du document n'a pas d'\u00e9tat 'deleted'. Cette op\u00e9ration n'est pas possible pour:
 
 label.directories.subject.arts=Arts
 label.directories.subject.business=Commerce et \u00e9conomie
