--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -295,9 +295,11 @@ label.action.restart=Redémarrer le serveur
 
 adminsubtab.usersActivity.userSessions.title = Sessions Http des utilisateurs
 adminsubtab.usersActivity.userSessions.total = Nombre total de session actives
+adminsubtab.usersActivity.requests.total = Nombre total de requetes Http
 adminsubtab.usersActivity.userSessions.timerange = Sessions actives depuis
 label.userSession.login=Login
 label.userSession.inactivity=Temps d'inactivité
 label.userSession.duration=Durée de la session
 label.userSession.lastUrl=Dernière URL accédée
 label.userSession.lastActivity=Dernière activité
+label.userSession.requests=Pages accédées
