--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages_en.properties
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages_en.properties
@@ -294,9 +294,11 @@ label.restart.connectedusers= user(s) currently connected
 
 adminsubtab.usersActivity.userSessions.title = User's Http Sessions
 adminsubtab.usersActivity.userSessions.total = Total number of active Http Sessions
+adminsubtab.usersActivity.requests.total = Total number of Http requests
 adminsubtab.usersActivity.userSessions.timerange = List active sessions within last
 label.userSession.login=Login
 label.userSession.inactivity=Inactivity time
 label.userSession.duration=Session duration
 label.userSession.lastUrl=Last accessed url
 label.userSession.lastActivity=Last activity
+label.userSession.requests=Accessed pages
