--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages.properties
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages.properties
@@ -302,3 +302,7 @@ label.userSession.duration=Session duration
 label.userSession.lastUrl=Last accessed url
 label.userSession.lastActivity=Last activity
 label.userSession.requests=Accessed pages
+
+tab.themes.management=Themes management
+label.themes.management.description=Nuxeo Theme is Nuxeo's online theme editor that enables you to edit, customize and create looks for your application.
+label.themes.management.editor=Launch Nuxeo Theme
