--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -69,13 +69,15 @@ adminsubtab.sysinfo.bundles=Bundles déployés
 
 adminsubtab.sysinfo.binariesinfo.intro=Informations sur les binaires
 adminsubtab.sysinfo.binariesinfo.start=Lancer le nettoyage des binaires
+adminsubtab.sysinfo.binariesinfo.delete=Supprimer les binaires à nettoyer
 adminsubtab.sysinfo.binariesinfo.wait=Merci de patienter, nettoyage en cours...
-adminsubtab.sysinfo.binariesinfo.info=Information sur les binaires utilisés et nettoyés dans la base de données
+adminsubtab.sysinfo.binariesinfo.info=Information sur les binaires utilisés et nettoyés dans la base de données.
+adminsubtab.sysinfo.binariesinfo.notdeleted=(Les binaires à nettoyer n'ont pas été supprimés.)
 adminsubtab.sysinfo.binariesinfo.gcduration=Temps de nettoyage (secondes)
 adminsubtab.sysinfo.binariesinfo.numbinaries=Nombre de binaires utilisés
 adminsubtab.sysinfo.binariesinfo.sizebinaries=Taille des binaires utilisés (octets)
-adminsubtab.sysinfo.binariesinfo.numbinariesgc=Nombre de binaires nettoyés
-adminsubtab.sysinfo.binariesinfo.sizebinariesgc=Taille des binaires nettoyés (octets)
+adminsubtab.sysinfo.binariesinfo.numbinariesgc=Nombre de binaires à nettoyer
+adminsubtab.sysinfo.binariesinfo.sizebinariesgc=Taille des binaires à nettoyer (octets)
 
 label.packagetype=Type de package
 label.packagetype.all=Tous
