--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages_en.properties
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/OSGI-INF/l10n/messages_en.properties
@@ -68,8 +68,10 @@ adminsubtab.sysinfo.bundles=Deployed bundles
 
 adminsubtab.sysinfo.binariesinfo.intro=Information about the repository binaries
 adminsubtab.sysinfo.binariesinfo.start=Start garbage collection of binaries
+adminsubtab.sysinfo.binariesinfo.delete=Delete the garbage collected binaries
 adminsubtab.sysinfo.binariesinfo.wait=Please wait, garbage collecting binaries...
-adminsubtab.sysinfo.binariesinfo.info=Information about the repository's active and garbage collected binaries
+adminsubtab.sysinfo.binariesinfo.info=Information about the repository's active and garbage collected binaries.
+adminsubtab.sysinfo.binariesinfo.notdeleted=(Garbage collected binaries were not deleted.)
 adminsubtab.sysinfo.binariesinfo.gcduration=Garbage collection duration (seconds)
 adminsubtab.sysinfo.binariesinfo.numbinaries=Number of active binaries
 adminsubtab.sysinfo.binariesinfo.sizebinaries=Size of active binaries (bytes)
